# RAG-MultiAgent

./: .env.example  .gitattributes  .gitignore  README.md  docker-compose.yml  pom.xml  verification-report.md
data/smartcloud_kb/: billing_policy_orders_invoices.txt  icp_filing_checklist.txt  marketing_h5_campaign_assets.txt  observability_prometheus_grafana.txt  product_catalog_ecs_gpu_database.txt  smartcloud_service_index.txt  support_sla_ticket_runbook.txt
docs/: multi-agent-architecture.md  smartcloud-agent-rag-tools-interview.md  smartcloud-claude-code-inspired-interview.md  smartcloud-interview-question-bank.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  i18n.tsx  styles.css
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: lib.rs  main.rs
frontend/src/api/: client.ts
frontend/src/components/: ApiKeySetupModal.tsx  ChatMessage.tsx  Composer.tsx  Sidebar.tsx  StatsCard.tsx  StatusBadge.tsx  WebNavigation.tsx
frontend/src/context/: AuthContext.tsx  auth-core.ts  useAuth.ts
frontend/src/hooks/: useChat.ts  useConversations.ts  useSettings.ts
frontend/src/pages/: A2ADemo.tsx  Billing.tsx  Chat.tsx  Dashboard.tsx  Login.tsx  Manage.tsx  MarketingAssets.tsx  McpTools.tsx  Observability.tsx  Prompts.tsx  Settings.tsx
observability/prometheus/: prometheus.yml
output/playwright/: capture-smartcloud-screenshot.mjs
scripts/: build_windows_installer.ps1
src/main/resources/: application.yml
(+550 files in other folders)
