[package]
name = "smartcloud-serviceops"
version = "0.2.0"
description = "SmartCloud industrial multi-agent customer service platform"
authors = ["SmartCloud Demo Team"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
log = "0.4"
portpicker = "0.1"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-log = "2"
tauri-plugin-notification = "2"
tauri-plugin-shell = "2"
uuid = { version = "1.18", features = ["v4"] }
